[gd_scene load_steps=2 format=3 uid="uid://d08pcmw570k5r"]

[ext_resource type="Script" path="res://Scripts/PlayerUI.gd" id="1_e2xkj"]

[node name="UI Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2xkj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 549.0
offset_top = 230.0
offset_right = 608.0
offset_bottom = 331.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Red" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Red"

[node name="Yellow" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Yellow"

[node name="Blue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Blue"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Yellow" to="." method="_on_yellow_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Blue" to="." method="_on_blue_pressed"]
